2006-03-13 a little later - Kasper Skaarhoej
	* Added new view: "Outline". This will show a tree view of the page content structure. This view is currently only available for Admin users and they toggle it using a new checkbox in the "Advanced" tab. All affected functions are in mod1/index.php in its own section and will be easy to move to another class if needed. However, they are a parallel implementation of the render_framework* functions. 
	* Fixed bug I made during refactoring: Names of columns was not displayed

2006-03-13  Kasper Skaarhoej
	* Re-inserted rejected changes, however I fixed all problems pointed out by robert in mail.
	* Moved getContentTree from mod1/index.php to api-class: At the same time the output from getContentTree has been cleaned up so it doesn't contain formatted preview output (only data on which a preview can be rendered in mod1/index.php). 
	* getContentTree also includes elements from all languages in its structure (although mod1/index.php only shows the selected language); this leads to the sideeffect that the list of non-used content elements is accurate now!
	* getContentTree can be used from other applications to read out the page structure from TemplaVoila!
	* Changed that the sidebar is now _outside_ (on top of) the rendered page: This was necessary to have proper function in case (very rarely though) that sheets are used for the page template! Question is if we should take some action to move only the icons for the top-level element to top of page again?
	* The refactoring of getContentTree() has been thoroughly tested with as many scenarios I could create and I'm very confident it will work.
	* Of course, all parameters of getContentTree-related functions may have been moved around since the functions were moved; It is considered unrealistic that any external extension were using getContentTree from its location in mod1/index.php.
	
2006-03-13	Robert Lemke <robert@typo3.org>